--- a/src/assets/common/_common.scss
+++ b/src/assets/common/_common.scss
@@ -17,19 +17,19 @@
   }
 }
 
-@media (max-width: 1325px) and (min-width: 767px) {
-  .container {
-    padding: 0 24px;
-  }
-}
-
 .app{
   font-family: 'Fira Sans', sans-serif;
   display: flex;
   border: black 1px solid;
+  @media (max-width: 1200px) {
+    flex-direction: column;
+  }
   &-left{
     flex-basis: 40%;
     padding: 15px 30px;
+    @media (max-width: 1200px) {
+      padding: 15px;
+    }
   }
   &-right{
     flex-basis: 60%;
@@ -37,6 +37,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @media (max-width: 1200px) {
+      padding: 15px;
+    }
   }
 }
 
@@ -72,6 +75,9 @@ label {
   border: none;
   color: white;
   padding: 0 30px;
+  @media (max-width: 1200px) {
+    padding: 0 15px;
+  }
   &-add{
     background: forestgreen;
   }
@@ -91,6 +97,10 @@ label {
   justify-content: center;
 }
 
+button{
+  cursor: pointer;
+}
+
 .task{
   padding: 20px;
   border: black 1px solid;
@@ -100,6 +110,9 @@ label {
   &-feature{
     display: flex;
     justify-content: space-between;
+    @media (max-width: 1200px) {
+      flex-direction: column;
+    }
   }
   &-detail{
     padding: 0 20px;
@@ -111,6 +124,11 @@ label {
   }
   &-bulk-action{
     background: grey;
+    margin: 45px -30px -15px;
+    padding: 30px;
+    @media (max-width: 1200px) {
+      margin: 30px -15px -15px;
+    }
   }
 }
 
@@ -135,6 +153,13 @@ label {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
+  // ...
+  max-width: 350px;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Hide the browser's default checkbox */
